--- a/Blockerc/Blockerc.csproj
+++ b/Blockerc/Blockerc.csproj
@@ -5,7 +5,23 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>trayIcon.ico</ApplicationIcon>
+    <Copyright>s17179XTY</Copyright>
+    <Company>s17179XTY</Company>
+    <PackageIcon>trayIcon.png</PackageIcon>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="trayIcon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\KillDyKnow_source_from_Procyon\lowest_cpu_version\trayIcon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="IKVM" Version="8.7.1" />
